@@ -2,7 +2,7 @@ html {
   font-family: 'Lucida Grande';
   font-size: 9pt;
   background-color: black;
-  color: #d4d4d4;
+  color: #d0d0d0;
   padding: 0;
   margin: 0;
 }
