@@ -1,5 +1,9 @@
 2007-12-14  Satoshi Nakagawa <artension@gmail.com>
 
+	Tweaked Deep Ocean theme.
+
+2007-12-14  Satoshi Nakagawa <artension@gmail.com>
+
 	Fixed a bug, weights for completion didn't work correctly.
 
 2007-12-14  Satoshi Nakagawa <artension@gmail.com>
